Add analytics and change title to include group name.

--- a/thankyou.html
+++ b/thankyou.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Valtech Food / Gruppnamn - Tack för beställningen</title>
+    <title>Valtech Food / META Escapees - Tack för beställningen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
-    <h1>Tack för din beställning!</h1>
+    <h1>Tack för din beställning! 👋</h1>
 
     <div class="center">
       <a href="index.html"> « Tillbaka</a>
