--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8" />
-    <title>Valtech Food / Gruppnamn - Beställning</title>
+    <title>Valtech Food / META Escapees - Beställning</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="styles.css" rel="stylesheet" />
@@ -35,7 +35,7 @@
     ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
     <h1>Matbeställning</h1>
 
     <ul class="products">
