--- a/thankyou.html
+++ b/thankyou.html
@@ -52,7 +52,7 @@
       //Lägg in och fyll datalagret vid färdig transaktion
       window.dataLayer = window.dataLayer || [];
       
-      window.dataLayer.push({
+      dataLayer.push({
         event: "TransactionSuccess",
         product: product,
         productPrice: price
